--- a/desafio7PreEntrega2/public/css/general.css
+++ b/desafio7PreEntrega2/public/css/general.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 /* Tipografia */
-/* Colores de la marca */
 * {
   font-family: "Poppins", sans-serif;
   margin: 0px;
@@ -23,3 +22,8 @@ ul {
 
 li {
   list-style: none; }
+
+  div{
+    color: #000000;
+    padding: 200px;
+  }
