--- a/desafio9/SRC/views/register.handlebars
+++ b/desafio9/SRC/views/register.handlebars
@@ -9,13 +9,13 @@
                 <input type="text" name="formLastname" id="formLastname" placeholder="Lastname" required>
             </p>
             <p type="Email:">
-                <input type="text" name="formEmail" id="formEmail" placeholder="Email" required>
+                <input type="text" name="email" id="formEmail" placeholder="Email" required>
             </p>
             <p type="Age:">
                 <input type="number" name="formAge" id="formAge" placeholder="Age" required>
             </p>
             <p type="Password:">
-                <input type="password" name="formPassword" id="formPassword" placeholder="Password" required>
+                <input type="password" name="password" id="formPassword" placeholder="Password" required>
             </p>
             <button>
                 <input type="submit" value="Register">
@@ -23,6 +23,10 @@
             <div>
                 <a class="fa" href="/login">Login</a>
             </div>
+            <a class="gitHubIconRegister" href="/api/sessions/github">
+                <img class="logo-header" src="resources/iconos/gitHub.png" alt="Logo GitHub"
+                    width="75">
+            </a>
         </form>
     </div>
 
