--- a/desafio9/SRC/views/layouts/main.handlebars
+++ b/desafio9/SRC/views/layouts/main.handlebars
@@ -14,24 +14,31 @@
     <header class="bg-dark bg-gradient p-2" #subir>
         <div class="d-flex justify-content-between align-items-center">
             <a href="/">
-                <img class="logo-header" src="/resources/logo/transparente.png" alt="Logo Silvina Tejerina"
-                    width="250">
+                <img class="logo-header" src="/resources/logo/transparente.png" alt="Logo Silvina Tejerina" width="250">
             </a>
             <div>
+                {{#if user.username}}
+                <a href="#" class="m-2">
+                    {{user.username}}
+                </a>
+                <a href="/api/sessions/logout" class="m-2">
+                    Logout
+                </a>
+                {{else}}
                 {{#if user.first_name}}
-                   <a href="#" class="m-2">
+                <a href="#" class="m-2">
                     {{user.first_name}}
                 </a>
                 <a href="/api/sessions/logout" class="m-2">
                     Logout
                 </a>
                 {{else}}
-                   <a href="/login" class="m-2">
+                <a href="/login" class="m-2">
                     Iniciar sesión
                 </a>
                 {{/if}}
-                <a href="/carts/{{user.cId}}" id="btnCarrito"
-                    class="m-3 p-2 bg-white rounded-pill d-flex justify-content-evenly align-items-center">
+                {{/if}}
+                <a href="/carts/{{user.cId}}" id="btnCarrito" class="m-3 p-2 bg-white rounded-pill justify-content-evenly align-items-center">
                     <img src="/resources/iconos/cart3.svg" width=25 alt="Carrito">
                     <span class="badge rounded-pill bg-danger" id="nProdCarrito">
                         0
@@ -53,8 +60,7 @@
                             <a class="nav-link active text-light" aria-current="page" href="/">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page"
-                                href="/products">Productos</a>
+                            <a class="nav-link active text-light" aria-current="page" href="/products">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-light" aria-current="page"
@@ -71,7 +77,7 @@
     </header>
 
     {{{body}}}
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
