--- a/PF/SRC/views/login.handlebars
+++ b/PF/SRC/views/login.handlebars
@@ -14,6 +14,9 @@
             <div>
                 <a class="fa" href="/register">Register</a>
             </div>
+            <div class="forgetPass">
+                <a class="fa" href="/forgetPassword">¿Olvidaste tu contraseña?</a>
+            </div>
             <a class="gitHubIconLogin" href="/api/sessions/github">
                 <img class="logo-header" src="resources/iconos/gitHub.png" alt="Logo GitHub"
                     width="75">
