--- a/PF/SRC/views/realTimeProducts.handlebars
+++ b/PF/SRC/views/realTimeProducts.handlebars
@@ -1,5 +1,8 @@
 <div>
-
+    <div id="userData"
+         data-user-email="{{user.email}}"
+         data-user-role="{{user.role}}">
+    </div>
     <div class="v-form" data-aos="zoom-out-up" data-aos-duration="2000">
         <form id="form" class="form">
             <h2>Add product</h2>
