--- a/PF/public/css/realTimeProducts.css
+++ b/PF/public/css/realTimeProducts.css
@@ -99,6 +99,18 @@ li {
       font-size: 13px;
       box-shadow: 10px 10px 40px -14px #000;
       text-align: center; }
+      .v-form .form .forgetPass {
+        position: absolute;
+        bottom: -60px;
+        right: 415px;
+        background: #50505a;
+        color: #fff;
+        width: 200px;
+        padding: 16px 4px 16px 0;
+        border-radius: 6px;
+        font-size: 13px;
+        box-shadow: 10px 10px 40px -14px #000;
+        text-align: center; }
       .v-form .form div span {
         margin: 0 5px 0 15px; }
         .v-form .form .gitHubIconLogin {
