--- a/PF/SRC/views/cart.handlebars
+++ b/PF/SRC/views/cart.handlebars
@@ -20,7 +20,7 @@
             </table>
             <div class="container d-flex justify-content-around mb-5">
                 <button type="button" class="btn btn-outline-danger" onClick="clearCart('{{user.cId}}')">Vaciar Carrito</button>
-                <button type="button" class="btn btn-outline-success" onClick="buyCart('{{user.cId}}', '{{user.email}}')">Finalizar compra!</button>
+                <button type="button" class="btn btn-outline-success" onClick="buyCart('{{user.cId}}', '{{user.email}}', '{{user.role}}')">Finalizar compra!</button>
             </div>
         </div>
     </div>
